------------------------------------------------------------------------
r1899 | gaser | 2021-10-25 10:17:00

Changed paths:
M       CHANGES.txt
M       cat_main_LAS2.m
M       cat_main_LASs.m
M       cat_stat_spm2x.m
M       cat_surf_results.m
M       cat_vol_slice_overlay.m

(1) Changed: Replaced "Size" by "Cluster-Size" in some functions to better
             describe that parameter.
(2) Changed: Set text interpreter to "none" in cat_surf_results.m for data tips.
(3) Fixed:   Corrected some typos.

------------------------------------------------------------------------
r1898 | gaser | 2021-10-25 09:12:48 +0200 (Mon, 25 Oct 2021) | 13 lines

Changed paths:
M       CHANGES.txt
MM      cat_roi_values2surf.m
M       cat_stat_analyze_ROIs.m
M       cat_stat_confplot_spm.m

(1) Changed: Added check for F-contrasts for effects of interest to 
             cat_stat_confplot_spm.m to prevent plotting of raw data for 
             that case.
(2) Changed: Added a break if no xml-files were found to save time in 
             cat_stat_analyze_ROIs.m.  


------------------------------------------------------------------------
r1897 | dahnke | 2021-10-24 10:51:16 +0200 (Sun, 24 Oct 2021) | 16 lines

Changed paths:
M       CHANGES.txt
M       cat_main_LAS2.m
M       cat_main_updateSPM.m
M       cat_main_updateSPM1639.m
M       ds.m

(1) Fixed:      Corrected bug in LAS2 in case of empty background class. 
(2) Fixed:      Corrected bug in longitudinal processing of single timepoints
                with empty backgrounds in cat_main_updateSPM[1639].
                





------------------------------------------------------------------------
r1896 | gaser | 2021-10-22 15:42:07 +0200 (Fri, 22 Oct 2021) | 16 lines

Changed paths:
M       CHANGES.txt
M       cat12.m
M       cat_surf_fun.m
M       cat_surf_results.m
M       cat_vol_slice_overlay.m
M       compile.m

(1) Changed: Added compilation for octave to compile.m.